[gd_scene load_steps=21 format=3 uid="uid://cwend30ytnol"]

[ext_resource type="Script" uid="uid://dles7ysbfjh3p" path="res://Scripts/door_2x1.gd" id="1_ybl5b"]
[ext_resource type="Shader" uid="uid://doiwshaooqmgk" path="res://Shaders/white_outline.gdshader" id="2_4aaj4"]
[ext_resource type="Texture2D" uid="uid://bwavxgcnywfr5" path="res://Sprites/Doors3x2-Sheet.png" id="3_82iqs"]
[ext_resource type="AudioStream" uid="uid://b4nd1uavqf4lf" path="res://Sounds/SFX/Door-Open.wav" id="4_8tp6n"]
[ext_resource type="AudioStream" uid="uid://bcfrj62i65ym" path="res://Sounds/SFX/Door-Close.wav" id="5_0f5en"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sl6fw"]
radius = 31.0161

[sub_resource type="ShaderMaterial" id="ShaderMaterial_foiqg"]
resource_local_to_scene = true
shader = ExtResource("2_4aaj4")
shader_parameter/outline_color = Vector4(7.12, 7.64, 21.81, -5.305)
shader_parameter/outline_enabled = false

[sub_resource type="AtlasTexture" id="AtlasTexture_clwoh"]
atlas = ExtResource("3_82iqs")
region = Rect2(192, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5laq"]
atlas = ExtResource("3_82iqs")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_edte4"]
atlas = ExtResource("3_82iqs")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lb5e"]
atlas = ExtResource("3_82iqs")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1fgo"]
atlas = ExtResource("3_82iqs")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bn8mk"]
atlas = ExtResource("3_82iqs")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbt1t"]
atlas = ExtResource("3_82iqs")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkf0p"]
atlas = ExtResource("3_82iqs")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4ipd"]
atlas = ExtResource("3_82iqs")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ly0p1"]
atlas = ExtResource("3_82iqs")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5ecj"]
atlas = ExtResource("3_82iqs")
region = Rect2(192, 0, 48, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_6voox"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_clwoh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5laq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edte4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lb5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1fgo")
}],
"loop": false,
"name": &"Close",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bn8mk")
}],
"loop": false,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbt1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkf0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4ipd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ly0p1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5ecj")
}],
"loop": false,
"name": &"Open",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8q4mf"]
size = Vector2(48, 20)

[node name="Door3x2" type="StaticBody2D"]
position = Vector2(0, -5)
script = ExtResource("1_ybl5b")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(8, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(8, 0)
shape = SubResource("CircleShape2D_sl6fw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_foiqg")
position = Vector2(16, -3)
sprite_frames = SubResource("SpriteFrames_6voox")
animation = &"Close"
frame = 4
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(16, -1)
shape = SubResource("RectangleShape2D_8q4mf")

[node name="DoorOpenSfx" type="AudioStreamPlayer2D" parent="."]
position = Vector2(16, 0)
stream = ExtResource("4_8tp6n")
volume_db = -3.0
pitch_scale = 0.92

[node name="DoorCloseSfx" type="AudioStreamPlayer2D" parent="."]
position = Vector2(16, 0)
stream = ExtResource("5_0f5en")
volume_db = -3.0

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
